add currentuser and uploader logic

--- a/MFS.Core/MFS.Core.csproj
+++ b/MFS.Core/MFS.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CurrentUserService.cs" />
     <Compile Include="Utilities\Encrypt.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
