--- a/MFS.WinForms/MFS.WinForms.csproj
+++ b/MFS.WinForms/MFS.WinForms.csproj
@@ -88,9 +88,11 @@
     </Compile>
     <Compile Include="Interfaces\ILoginView.cs" />
     <Compile Include="Interfaces\IRegisterView.cs" />
+    <Compile Include="Interfaces\IStorageView.cs" />
     <Compile Include="Models\LoginUserViewModel.cs" />
     <Compile Include="Presenters\LoginPresenter.cs" />
     <Compile Include="Presenters\RegisterPresenter.cs" />
+    <Compile Include="Presenters\StoragePresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\StorageView.cs">
