--- a/MFS.WinForms/MFS.WinForms.csproj
+++ b/MFS.WinForms/MFS.WinForms.csproj
@@ -177,6 +177,9 @@
   <ItemGroup>
     <None Include="Resources\add-file.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\undraw_empty_xct9.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
